tests/outref/TAS01.ref

-- TAS01 : Issue syntax error for empty ARRAY constructor

SELECT ARRAY();

Error with syntax near (line 1, column 14):

SELECT ARRAY();
             ^
syntax error, unexpected RIGHT_PAREN

[ERROR] PATH:LINENUM DATE TIME : ERR_PARSING_COMMAND : Error parsing statement: SELECT ARRAY();
